[package]
name = "arcade_game"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = { version = "0.6.2", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.7.0", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4.0", path = "../embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
#embassy-usb = { version = "0.4.0", path = "../embassy/embassy-usb", features = ["defmt"] }
#embassy-net = { version = "0.7.0", path = "../embassy/embassy-net", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
#embassy-net-wiznet = { version = "0.2.0", path = "../embassy/embassy-net-wiznet", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
#embassy-usb-logger = { version = "0.4.0", path = "../embassy/embassy-usb-logger" }
embassy-embedded-hal = { version = "0.3.0", path = "../embassy/embassy-embedded-hal"}
#cyw43 = { version = "0.3.0", path = "../embassy/cyw43", features = ["defmt", "firmware-logs"] }
#cyw43-pio = { version = "0.3.0", path = "../embassy/cyw43-pio", features = ["defmt"] }

cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
embedded-hal = "0.2.6"
panic-halt = "0.2"
panic-probe = "0.3"
defmt = "0.3"
defmt-rtt = "0.4"
critical-section = "1.2.0"
#st7735-lcd = {version = "0.10.1", path = "../my_gits/st7735-lcd-rs"}
#ili9341 = { version = "0.6.1", path = "../my_gits/ili9341-rs" }
ili9341 = { version = "0.6.1", git = "https://github.com/mohgTheOmen/ili9341-rs"}
st7735-lcd = {version = "0.10.1", git = "https://github.com/mohgTheOmen/st7735-lcd-rs", branch="master"}
static_cell = "1.2"
itoa = "1.0"

display-interface-spi = "0.5.0"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
rand_core = "0.6"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
heapless = "0.7"
fixed = "1.12.0"
tinybmp = "0.5"
mfrc522 = "0.5.0"
embedded-canvas = "0.3.1"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[dependencies.embedded-graphics]
version = "0.7"
optional = true

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
